--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,23 +38,35 @@ set(BOOST_ROOT ${VCPKG_INSTALLED_DIR}/${VCPKG_TRIPLET})
 
 
 find_package(Boost 1.82.0 REQUIRED)
+find_package(tomlplusplus CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(inja CONFIG REQUIRED)
 
-add_executable(prog
-			src/main.cpp
+set(PROJECT_NAME prog)
+
+add_executable(${PROJECT_NAME}
 			src/HttpServer.cpp
 			src/HttpConnection.cpp
 			src/HttpRouter.cpp
 			src/HttpController.cpp
+			src/HttpFilterManager.cpp
+			src/Filters.cpp
+
+			src/main.cpp
+			src/fileGetters.cpp
 			#src/example.cpp
 			#src/router_test.cpp
 			)
 
-target_link_libraries(prog PUBLIC Boost::boost)
+target_link_libraries(${PROJECT_NAME} PRIVATE Boost::boost)
+target_link_libraries(${PROJECT_NAME} PRIVATE tomlplusplus::tomlplusplus)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} PRIVATE pantor::inja)
 
-target_compile_features(prog PUBLIC cxx_std_17)
-target_include_directories(prog PUBLIC "include")
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+target_include_directories(${PROJECT_NAME} PRIVATE "include")
 
-set_target_properties( prog
+set_target_properties( ${PROJECT_NAME}
 	PROPERTIES
 	ARCHIVE_OUTPUT_DIRECTORY "${LIB_OUTPUT_DIR}"
 	LIBRARY_OUTPUT_DIRECTORY "${LIB_OUTPUT_DIR}"
